--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,25 @@
 <html>
   <head>
     <title>ESLAcademiesReviews</title>
+    <%= stylesheet_link_tag    'application', media: 'all',
+                                              'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+ </head>
+ <body>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-  </head>
-
-  <body>
-
+    <nav>
+      <ul>
+        <%- if user_signed_in? -%>
+          <li><%= link_to 'Sign Out', '#' %></li>
+        <%- else -%> 
+        <li><%= link_to 'Sign Up' , new_user_registration_path %></li>
+        <%- end -%>
+      </ul>
+    </nav>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
+   <p class="alert"><%= alert %></p>
     <%= yield %>
+
   </body>
 </html>
