--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <%- if user_signed_in? -%>
-          <!-- <li><%= link_to 'Sign Out', '#' %></li> -->
-          <li><%= link_to 'Sign Out', new_user_session_path %></li>
+          <li><%= link_to 'Sign Out', root_path %></li>
+          <!-- <li><%= link_to 'Sign Out', new_user_session_path %></li> -->
         <%- else -%>
         <li><%= link_to 'Sign in' , new_user_session_path %></li>
         <li><%= link_to 'Sign up' , new_user_registration_path %></li>
